--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@kyvg/vue3-notification": "^3.1.4",
     "@popperjs/core": "^2.11.8",
+    "apexcharts": "^3.53.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
@@ -25,7 +26,8 @@
     "pusher-js": "7.0.2",
     "v-money3": "^3.24.1",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-apexcharts": "^1.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
